--- a/config/config.yml
+++ b/config/config.yml
@@ -5,6 +5,7 @@ CHUNK_OVERLAP: 50
 DATA_PATH: 'data/'
 MODEL_TYPE: 'llama'
 MODEL_BIN_PATH: 'models/llama-2-7b-chat.ggmlv3.q8_0.bin'
+MODEL_PATH: 'models/llama-2-7b-chat.Q4_0.gguf'
 MAX_NEW_TOKENS: 1024
 CONTEXT_LENGTH: 4096
 TEMPERATURE: 0.01
