added new models, execution times ,tests, and redefined configurations and llm execution methods

--- a/config/config.yml
+++ b/config/config.yml
@@ -1,12 +1,7 @@
-RETURN_SOURCE_DOCUMENTS: True
-VECTOR_COUNT: 2
-CHUNK_SIZE: 500
-CHUNK_OVERLAP: 50
 DATA_PATH: 'data/'
-MODEL_TYPE: 'llama'
-MODEL_BIN_PATH: 'models/llama-2-7b-chat.ggmlv3.q8_0.bin'
-MODEL_PATH: 'models/llama-2-7b-chat.Q4_0.gguf'
+MODEL: 'llama-2-7b-chat.Q8_0'
+MODEL_PATH: 'models/llama-2-7b-chat.Q8_0.gguf'
 MAX_NEW_TOKENS: 1024
 CONTEXT_LENGTH: 4096
 TEMPERATURE: 0.01
-GPU_LAYERS: 50
+GPU_LAYERS: 100
