--- a/config/config.yml
+++ b/config/config.yml
@@ -1,6 +1,6 @@
 DATA_PATH: 'data/'
-MODEL: 'llama-2-7b-chat.Q8_0'
-MODEL_PATH: 'models/llama-2-7b-chat.Q8_0.gguf'
+MODEL: 'mistral-7b-instruct-v0.2.Q8_0'
+MODEL_PATH: 'models/mistral-7b-instruct-v0.2.Q8_0.gguf'
 MAX_NEW_TOKENS: 1024
 CONTEXT_LENGTH: 4096
 TEMPERATURE: 0.01
